# ExampleHydraRenderDelegate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Source/: ExMesh.cpp  ExRenderBuffer.cpp  ExRenderDelegate.cpp  ExRenderPass.cpp  ExRendererPlugin.cpp  Mesh.cpp  Mesh.h  PxrUsage.cpp  PxrUsage.h  RenderDelegate.cpp  RenderDelegate.h  RenderPass.cpp  RenderPass.h  RendererPlugin.cpp  RendererPlugin.h  StbUsage.cpp  plugInfo.json
Source/Include/ExampleDelegate/: ExMesh.h  ExRenderBuffer.h  ExRenderDelegate.h  ExRenderPass.h  ExRendererPlugin.h  PxrUsage.h  StbUsage.h
StandaloneTest/: CMakeLists.txt  StandaloneTest.cpp
